--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,8 @@ p { color: #8c9398; word-spacing: 1px; line-height: 25px; font-size: 14px; }
 h2 { font-size: 15px; color: #353535; text-transform: uppercase; font-weight: bold; }
 h2::after { content: " "; border: solid 2px #3dc9b3; display: block; width: 35px; margin: 25px auto; }
 .section-padding { padding: 90px 0 100px }
+
+
 .dark-bg { background: #f3f5f8; }
 .light-bg { background-color: #fff; }
 .dark-box { background: #f3f5f8; -webkit-box-shadow: 0px 3px 0px 0px #f0f2f4; -moz-box-shadow: 0px 3px 0px 0px #f0f2f4; box-shadow: 0px 3px 0px 0px #f0f2f4; }
@@ -256,14 +258,23 @@ Swag
 Portfolio
 ========================================================================== */
 
-section#portfolio { padding: 0; }
+.section-padding.features { padding: 90px 0 30px !important; }
+
+section#portfolio { padding: 0 0 50px 0; }
 section#portfolio li { clear:both; }
+section#portfolio li h2 { margin:0; }
+section#portfolio li h2::after {   margin: 15px auto; }
+
+
 
 .effects { padding-left: 15px; }
 .effects .img { position: relative; margin-bottom: 50px; position: relative; z-index: 1; overflow: hidden; }
 .effects .img:nth-child(n) { margin-right: 5px; }
-.effects .img:first-child { margin-left: -15px; }
+/*.effects .img:first-child { margin-left: -15px; }*/
+.effects .img { margin-left: -15px; }
+
 .effects .img:last-child { margin-right: 0; }
+
 .effects .img img { display: block; margin: 0; padding: 0; height: auto; }
 .overlay { display: block; position: absolute; z-index: 20; background: rgba(100, 194, 158, 0.8); overflow: hidden; transition: all 0.5s; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; }
 a.close-overlay { display: block; position: absolute; top: 0; right: 0; z-index: 100; width: 45px; height: 45px; font-size: 20px; font-weight: 700; color: #fff; line-height: 45px; text-align: center; background-color: #000; cursor: pointer; }
