--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,8 @@ Global Styles
 ========================================================================== */
 a { color: #353535; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
 a:hover, a:focus { color: #3dc9b3; text-decoration: none; }
-p { color: #8c9398; word-spacing: 1px; line-height: 25px; font-size: 14px; }
+p { color: #8c9398; word-spacing: 1px;  line-height: 29px;
+  font-size: 17px; }
 h2 { font-size: 15px; color: #353535; text-transform: uppercase; font-weight: bold; }
 h2::after { content: " "; border: solid 2px #3dc9b3; display: block; width: 35px; margin: 25px auto; }
 .section-padding { padding: 90px 0 100px }
@@ -266,6 +267,19 @@ section#portfolio li h2 { margin:0; }
 section#portfolio li h2::after {   margin: 15px auto; }
 
 section#portfolio .col-md-4 {   padding-bottom: 5em; }
+
+section#portfolio .col-md-4  p a {   
+display: inline-block;
+  margin: 0 1em 0 0;
+  color: #AB5407;
+  /* text-decoration: underline; */
+  /* padding: 0 0 1px 0; */
+  border-bottom: 1px solid #E2B083;
+   }
+
+
+
+
 
 .effects { padding-left: 15px; }
 .effects .img { position: relative; margin-bottom: 50px; position: relative; z-index: 1; overflow: hidden; }
